--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -167,12 +167,15 @@ crossorigin=""/>
 <div class="row">
   <div class="col-12 text-justify"> 
     <div class="row">
+
       <div class="col-5 partiedroite">
         <div class="col-12 nombres" style="background-color: blue;">
-          <div class="offset-1 col-5">464 Ingredients</div>
-          <div class="offset-1 col-5">102 descripteurs</div>
+          <div class="offset-1 col-3">
+            <a href="../_/listingredient.html" class="listeMP-number">370</a> ingredients</div>
+          <div class="offset-1 col-3"><a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a> familles principales</div>
+          <div class="offset-1 col-3"><a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">82</a> descripteurs</div>
         </div>
-        <div class="col-12 text-center" style="align-items: center;">
+        <div class="col-12 mt-3 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
         </div>
