--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -170,9 +170,9 @@ crossorigin=""/>
 
       <div class="col-5 partiedroite">
         <div class="row col-12 mt-3 nombres" style="background-color: blue; align-items: center;">
-          <div class="offset-1 col-3 mt-5" style="align-items: center;"><a href="../_/listingredient.html" class="listeMP-number">370</a><br> ingredients</div>
-          <div class="offset-1 col-3 mt-5"><a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a><br> familles principales</div>
-          <div class="offset-1 col-3 mt-5"><a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">82</a><br> descripteurs</div>
+          <div class="offset-1 col-3 mt-3 text-center" style="align-items: center;"><a href="../_/listingredient.html" class="listeMP-number">370</a><br> ingredients</div>
+          <div class="offset-1 col-3 mt-3"><a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a><br> familles principales</div>
+          <div class="offset-1 col-3 mt-3"><a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">82</a><br> descripteurs</div>
         </div>
         <div class="col-12 mt-3 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9">
