--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -170,7 +170,7 @@ crossorigin=""/>
 
       <div class="col-5 partiedroite">
         <div class="row col-12 mt-3 nombres text-center">
-          <div class="offset-1 col-3 mt-3 mb-3 text-center compteur"><a href="../_/listingredient.html" class="listeMP-number">370</a> ingredients</div>
+          <div class="offset-1 col-3 mt-3 mb-3 text-center compteur"><a href="../_/listingredient.html" class="listeMP-number">370</a><br>ingredients</div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a> familles principales</div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">82</a> descripteurs olfactifs</div>
         </div>
