--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -172,8 +172,7 @@ crossorigin=""/>
         <div class="row col-12 mt-3 nombres text-center">
           <div class="offset-1 col-3 mt-3 mb-3 text-center compteur">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
-            <br>
-            <span lang="fr" class="text-center">ingredients</span>
+            <p><span lang="fr" class="text-center">ingrédients</span><span lang="en" class="text-center">ingredients</span></p>
           </div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a> familles principales</div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">82</a> descripteurs olfactifs</div>
@@ -219,7 +218,7 @@ crossorigin=""/>
         <div class="sources col-12 mt-3 mb-3">
           <p class="mt-2 mb-2">
             <span lang="fr"><i class='fas fa-search-location fa-fw fa-lg icone'></i>&nbsp;La mise en forme de la classification <b><i>ScenTree</i></b> est inspirée de celle de <a href="http://lifemap.univ-lyon1.fr/explore.html" target ="_BLANK">LifeMap</a> crée par Mr. De Vienne pour l'université de Lyon I. Le concept est similaire à des cartographies telles que celles rencontrées dans Open Street Maps: l'exploration se fait par le biais de zooms et d'interactions avec des images.</span>
-            <p lang="en"><i class='fas fa-search-location fa-fw fa-lg icone'></i>&nbsp;<i><b>ScenTree</b></i>’s shaping is inspired by the <a href="http://lifemap.univ-lyon1.fr/explore.html" target ="_BLANK">LifeMap</a>, created by M. De Vienne from the University of Lyon I. This concept is quite similar to the ones met on cartographies as Open Street Maps: exploration is made through zooms and interactions with images.</span>
+            <span lang="en"><i class='fas fa-search-location fa-fw fa-lg icone'></i>&nbsp;<i><b>ScenTree</b></i>’s shaping is inspired by the <a href="http://lifemap.univ-lyon1.fr/explore.html" target ="_BLANK">LifeMap</a>, created by M. De Vienne from the University of Lyon I. This concept is quite similar to the ones met on cartographies as Open Street Maps: exploration is made through zooms and interactions with images.</span>
           </p>
         </div>
         <div class="sources col-12 mt-3 mb-3">
