--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -172,7 +172,7 @@ crossorigin=""/>
         <div class="row col-12 mt-3 nombres text-center">
           <div class="offset-1 col-3 mt-3 mb-3 text-center compteur">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
-            <p style="background-color: red;"><span lang="fr" class="text-center">ingrédients</span><span lang="en" class="text-center">ingredients</span></p>
+            <div class="row" style="background-color: red;"><span lang="fr" class="text-center">ingrédients</span><span lang="en" class="text-center">ingredients</span></div>
           </div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a> familles principales</div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">82</a> descripteurs olfactifs</div>
