--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -174,9 +174,15 @@ crossorigin=""/>
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
             <div class="row" style="background-color: red;"><span lang="fr" class="text-center">ingrédients</span><span lang="en" class="text-center">ingredients</span></div>
           </div>
-          <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a> familles principales</div>
-          <div class="offset-1 col-3 mt-3 mb-3 compteur"><a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">82</a> descripteurs olfactifs</div>
-        </div>
+          <div class="offset-1 col-3 mt-3 mb-3 compteur">
+            <a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a>
+            <div class="row" style="background-color: red;"><span lang="fr" class="text-center">familles principales</span><span lang="en" class="text-center">families</span></div>
+          </div>
+          <div class="offset-1 col-3 mt-3 mb-3 compteur">
+            <a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">85</a>
+            <div class="row" style="background-color: red;"><span lang="fr" class="text-center">Descripteurs secondaires</span><span lang="en" class="text-center">secondary descriptor</span></div>
+          </div>
+         
         <div class="col-12 mt-3 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
