--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -172,15 +172,24 @@ crossorigin=""/>
         <div class="row col-12 mt-3 nombres text-center">
           <div class="offset-1 col-3 mt-3 mb-3 text-center compteur">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
-            <div class="row" style="background-color: red;"><span lang="fr" class="text-center">ingrédients</span><span lang="en" class="text-center">ingredients</span></div>
+            <div class="row" >
+              <span lang="fr" class="text-center">ingrédients</span>
+              <span lang="en" class="text-center">ingredients</span>
+            </div>
           </div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur">
             <a href="../_/listdescriptors.html" class="Listefamilles-principales-number">16</a>
-            <div class="row" style="background-color: red;"><span lang="fr" class="text-center">familles principales</span><span lang="en" class="text-center">families</span></div>
+            <div class="row">
+              <span lang="fr" class="text-center">familles principales</span>
+              <span lang="en" class="text-center">families</span>
+            </div>
           </div>
           <div class="offset-1 col-3 mt-3 mb-3 compteur">
             <a href="../_/listdescriptors.html" class="Listefamilles-descripteurs-number">85</a>
-            <div class="row" style="background-color: red;"><span lang="fr" class="text-center">Descripteurs secondaires</span><span lang="en" class="text-center">secondary descriptor</span></div>
+            <div class="row">
+              <span lang="fr" class="text-center">Descripteurs secondaires</span>
+              <span lang="en" class="text-center">secondary descriptor</span>
+            </div>
           </div>
          
         <div class="col-12 mt-3 text-center" style="align-items: center;">
