--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -170,7 +170,7 @@ crossorigin=""/>
 
       <div class="col-5 partiedroite">
         <div class="row col-12 mt-3 nombres text-center">
-          <div class="col-3 mt-3 mb-3 text-center compteur">
+          <div class="offset-1 col-3 mt-3 mb-3 text-center compteur">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
             <div class="row" >
               <span lang="fr" class="text-center">ingrédients</span>
@@ -198,7 +198,7 @@ crossorigin=""/>
             <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
           </div>
         </div>
-        
+
       </div>
 
       <div class="col-7 textepresentation">
