--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -163,7 +163,7 @@ crossorigin=""/>
 
 <hr>
 
-<div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
+<div class="col-12 pagederoulante text-justify"> 
 <div class="row">
   <div class="col-12 text-justify"> 
     <div class="row">
@@ -201,7 +201,7 @@ crossorigin=""/>
 
       </div>
 
-      <div class="col-7 textepresentation">
+      <div class="col-7 textepresentation ">
         <div class="sources col-12 mt-3 mb-3">
           <p class="mt-2 mb-2"> 
             <span lang="fr"><i class='fa fa-question-circle fa-fw fa-lg icone'></i>&nbsp;<b><i>ScenTree</i></b> est un projet initié en 2017 par <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD </a> et <a href= "https://www.linkedin.com/in/thomas-espinasse-1aa576103/" target ="_BLANK"> Thomas ESPINASSE </a>, deux étudiants de l’ISIPCA. Il s’agit d’une <b>classification collaborative des matières premières de parfumerie, en fonction de leur famille et de leurs descripteurs olfactifs</b>. Pour chaque matière première, une famille et quatre descripteurs principaux sont possibles. Cela amène à présenter leur classification sous la forme d’un <b>arbre</b> à plusieurs niveaux de zoom, dont chaque nœud représente une famille ou un descripteur. Le terme «<b>collaboratif</b>» signifie que cette classification découle de la contribution de professionnels de la parfumerie : parfumeurs, évaluateurs, experts en matières premières etc. Tous nous ont aidé à classifier certaines matières premières de l’arbre.</span>
