--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -169,8 +169,8 @@ crossorigin=""/>
     <div class="row">
 
       <div class="col-5 partiedroite">
-        <div class="row col-12 mt-3 nombres text-center">
-          <div class="offset-1 col-3 mt-3 mb-3 compteur sources">
+        <div class="row col-12 mt-3 nombres text-center sources">
+          <div class="offset-1 col-3 mt-3 mb-3 compteur ">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
             <div class="row" >
               <span lang="fr" class="text-center">ingrédients</span>
@@ -192,7 +192,8 @@ crossorigin=""/>
             </div>
           </div>
          </div>
-
+        
+        <div class="col-12" style="min-height: 25%;"></div>
         <div class="col-12 mt-3 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
