--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -169,7 +169,7 @@ crossorigin=""/>
     <div class="row">
 
       <div class="col-5 partiedroite">
-        <div class="row col-12 mt-3 nombres text-center sources">
+        <div class="col-12 mt-3 nombres text-center sources">
           <div class="offset-1 col-3 mt-3 mb-3 compteur ">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
             <div class="row" >
@@ -193,7 +193,7 @@ crossorigin=""/>
           </div>
          </div>
         
-        <div class="col-12" style="min-height: 25%;"></div>
+        <div class="col-12" style="min-height: 15%;"></div>
         <div class="col-12 mt-3 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
