--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -169,8 +169,8 @@ crossorigin=""/>
     <div class="row">
 
       <div class="col-5 partiedroite">
-        <div class="row col-12 mt-3 nombres text-center sources">
-          <div class="offset-1 col-3 mt-3 mb-3 compteur ">
+        <div class="row offset-1 col-11 mt-3 nombres text-center sources">
+          <div class="col-3 mt-3 mb-3 compteur ">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
             <div class="row" >
               <span lang="fr" class="text-center">ingrédients</span>
