--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -169,7 +169,7 @@ crossorigin=""/>
     <div class="row">
 
       <div class="col-5 partiedroite">
-        <div class="row offset-1 col-11 mt-3 nombres text-center sources">
+        <div class="row col-11 mt-3 nombres text-center sources">
           <div class="col-3 mt-3 mb-3 compteur ">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
             <div class="row" >
