--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -168,7 +168,7 @@ crossorigin=""/>
   <div class="col-12 text-justify"> 
     <div class="row">
 
-      <div class="col-5 partiedroite">
+      <div class="col-5 partiedroite" style="align-items: center;">
         <div class="row col-11 mt-3 nombres text-center sources">
           <div class="col-3 mt-3 mb-3 compteur ">
             <a href="../_/listingredient.html" class="listeMP-number">370</a>
