--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -195,7 +195,7 @@ crossorigin=""/>
         
         <div class="col-12" style="min-height: 15%;"></div>
         <div class="col-12 mt-3 text-center" style="align-items: center;">
-          <div class="embed-responsive embed-responsive-16by9">
+          <div class="embed-responsive embed-responsive-16by9 sources">
             <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
           </div>
         </div>
