--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -12,7 +12,7 @@
 <title lang="fr">ScenTree - Menu</title>
 <title lang="en">ScenTree - Menu</title>
 <!--Description Google-->
-<meta name="description" content="Le projet ScenTree à été crée en 2019, il s'agit d'une plateforme de classification et d'information sur les ingrédients utilisés dans la création des parfums. De leurs odeurs à leurs utilisation en passant par leur réglementation, venez découvrir tous leurs secrets." />
+<meta name="description" content="Le projet ScenTree a été crée en 2019, il s'agit d'une plateforme de classification et d'information sur les ingrédients utilisés dans la création des parfums. De leurs odeurs à leurs utilisation en passant par leur réglementation, venez découvrir tous leurs secrets." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -193,7 +193,7 @@ crossorigin=""/>
           </div>
          </div>
         
-        <div class="col-12" style="min-height: 10%;"></div>
+        <div class="col-12" style="min-height: 8%;"></div>
         <div class="col-12 mt-3 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9 sources">
             <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
