--- a/html/_/support.html
+++ b/html/_/support.html
@@ -33,7 +33,7 @@ crossorigin=""/>
 <header class="d-md-none">
 <!-- fixed navbar -->
 <nav class="navbar  fixed-top  fillright">
-  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/scentree.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
+  <a class="btn  mr-auto  save_map_status_on_leaving" role="button" href="../_/menu.html"><img id="logo-image-sm" class="img-fluid  logomenu boutonclickable" src="../img/logon.png" alt="le logo de Scentree"></a>
 <div class="dropdown">
   <a href="../_/index.html"><i class="fas fa-reply" style="color: black;"></i></a>
 </div>
@@ -82,7 +82,7 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="col-12 text-center">
-    <a class="btn save_map_status_on_leaving" role="button" href="../_/scentree.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="le logo de Scentree"></a>
+    <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="le logo de Scentree"></a>
   </div>
 </div>
 
@@ -158,7 +158,7 @@ crossorigin=""/>
 
 <!-- C'EST ICI QUE COMMENCE LE CODE DE LA PARTIE DE GAUCHE -->
 <div class="col-12 text-center gros_titre">
-  <h1 class="gros_titre text-in-color-brown"><span lang="fr">LES SOUTIENS DU PROJET</span><span lang="en">SOURCES & REFERENCES</span></h1>
+  <h1 class="gros_titre text-in-color-brown"><span lang="fr">LES SOUTIENS DU PROJET</span><span lang="en">THEY SUPPORT US</span></h1>
 </div>
 
 <hr>
