--- a/html/_/menu.html
+++ b/html/_/menu.html
@@ -122,6 +122,7 @@ crossorigin=""/>
           <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
           <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
           <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+          <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
       </div>
     </div>
    <div class="copyright row  d-none d-sm-none d-md-block">
@@ -195,7 +196,7 @@ crossorigin=""/>
          </div>
         
         <div class="col-12 correctionsource" style="min-height: 8%;"></div>
-        
+
         <div class="col-12 mt-3 text-center" style="align-items: center;">
           <div class="embed-responsive embed-responsive-16by9 sources">
             <iframe class="embed-responsive-item" src="https://youtube.com/embed/jpSyGY1EPVs" allowfullscreen id="video"></iframe>
