--- a/html/_/legal.html
+++ b/html/_/legal.html
@@ -56,7 +56,8 @@ crossorigin=""/>
     <div class="dropdown-divider"></div>
     <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
     <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-  <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+    <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank"></a>
+    <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
   </div>
   <span><i class="fas fa-info-circle notifi3"></i></span>
 </div>
@@ -122,7 +123,8 @@ crossorigin=""/>
       <div class="col-12 mb-1 p-0 text-center">
           <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
           <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-          <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+          <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank"></a>
+          <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
       </div>
     </div>
    <div class="copyright row  d-none d-sm-none d-md-block">
