--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -56,7 +56,8 @@ crossorigin=""/>
     <div class="dropdown-divider"></div>
     <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
     <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank"></a>
-  <a class="fab fa-facebook-square ml-3" href="https://www.linkedin.com/company/scentree/" target="_blank"></a>
+    <a class="fab fa-facebook-square ml-3" href="https://www.facebook.com/scentree/" target="_blank"></a>
+    <a class="fab fa-youtube ml-3" href="https://www.youtube.com/channel/UCZaUDfZPrkZHHqq1FmLL6FA" target="_blank"></a>
   </div>
   <span><i class="fas fa-info-circle notifi3"></i></span>
 </div>
