--- a/html/_/legal.html
+++ b/html/_/legal.html
@@ -198,7 +198,12 @@ crossorigin=""/>
     </li>
   </ul>   
 
-<li class="Titre1"><span lang="fr">Conditions générales d’utilisation du site internet et description des services fournis</span><span lang="en">General website usage conditions and description of services provided</span></li>
+<h2>
+  <li class="Titre1">
+    <span lang="fr">Conditions générales d’utilisation du site internet et description des services fournis</span>
+    <span lang="en">General website usage conditions and description of services provided</span>
+  </li>
+</h2>
 
   <p class="paragraphe">
     <span lang="fr">L’utilisation du site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> implique l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces conditions d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les utilisateurs du site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> sont donc invités à les consulter de manière régulière.</span>
