--- a/html/_/legal.html
+++ b/html/_/legal.html
@@ -198,7 +198,7 @@ crossorigin=""/>
     </li>
   </ul>   
 
-<h2>
+<h2 class="maskedtitle">
   <li class="Titre1">
     <span lang="fr">Conditions générales d’utilisation du site internet et description des services fournis</span>
     <span lang="en">General website usage conditions and description of services provided</span>
