--- a/html/_/legal.html
+++ b/html/_/legal.html
@@ -12,7 +12,7 @@
 <title lang="fr">ScenTree - Legal - Mentions Légales</title>
 <title lang="en">ScenTree - Legal - Mentions Légales</title>
 <!--Description Google-->
-<meta name="description" content="ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
+<meta name="description" content="Découvrez les mentions légales de ScenTree, la nouvelle classification innovante et collaborative des matières premières utilisées en parfumerie. Voyagez dans l'univers merveilleux des odeurs." />
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -174,7 +174,12 @@ crossorigin=""/>
 </p>
 
 <ol>
-<li class="Titre1"><span lang="fr">Informations générales</span><span lang="en">General Information</span></li>
+<h2 class="maskedtitle">
+  <li class="Titre1">
+    <span lang="fr">Informations générales</span>
+    <span lang="en">General Information</span>
+  </li>
+</h2>
   <ul class="row col-12 mt-3 mb-3">
     <li class="col-6"><span lang="fr" class="Soustitre1">Propriétaire du site internet :</span><span lang="en" class="Soustitre1">Website owner :</span>
       <br>ScenTree SAS
@@ -222,7 +227,12 @@ crossorigin=""/>
     <span lang="en">In the same way, the legal mentions may be modified at any time: they are binding on the user, who is invited to refer to them as often as possible in order to take note of them.</span>
   </p>
 
-<li class="Titre1"><span lang="fr">Propriété intellectuelle</span><span lang="en">Intellectual property</li>
+<h2 class="maskedtitle">
+  <li class="Titre1">
+    <span lang="fr">Propriété intellectuelle</span>
+    <span lang="en">Intellectual property</span>
+  </li>
+</h2>
 
   <p class="paragraphe">
     <span lang="fr">La société ScenTree SAS est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments accessibles sur le site, tant sur la structure que sur les textes, images, graphismes, logo, icônes, sons et logiciels.</span>
@@ -235,7 +245,12 @@ crossorigin=""/>
     <span lang="en">Any unauthorized use of the <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website or any of the elements it contains will be considered as constituting an infringement and liable to prosecution, in accordance with the provisions of Articles L. 335-2 and following of the Intellectual Property Code.</span>
   </p>
 
-<li class="Titre1"><span lang="fr">Limitations de responsabilité</span><span lang="en">Responsability limits</span></li>
+<h2 class="maskedtitle">
+  <li class="Titre1">
+    <span lang="fr">Limitations de responsabilité</span>
+    <span lang="en">Responsability limits</span>
+  </li>
+</h2>
   <p class="paragraphe">
     <span lang="fr">La société ScenTree SAS ne saura être tenue responsable de dommages matériels liés à l’utilisation du site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a>. De plus, l’utilisateur du site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> s’engage à accéder à ce dernier en utilisant un matériel récent, ne contenant pas de virus et avec un navigateur de dernière génération mis à jour.</span>
     <span lang="en">ScenTree SAS cannot be held responsible for any material damage related to the use of the <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website. Moreover, the user of the <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website undertakes to access the latter using recent equipment, free of viruses and with a latest-generation browser that has been updated.</span>
@@ -247,7 +262,12 @@ crossorigin=""/>
     <span lang="en">Neither ScenTree SAS can be held responsible for indirect damages (such as loss of business or loss of opportunity) resulting from the use of the <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website.</span>
   </p>
 
-  <li class="Titre1"><span lang="fr">Gestion des données personnelles</span><span lang="en">Personal data management</span></li>
+<h2 class="maskedtitle">
+  <li class="Titre1">
+    <span lang="fr">Gestion des données personnelles</span>
+    <span lang="en">Personal data management</span>
+  </li>
+</h2>
     <ol type="A">
       <li class="Titre2"><span lang="fr">Avant-propos :</span><span lang="en">Foreword : </span></li>
         <p class="paragraphe">
@@ -338,9 +358,14 @@ crossorigin=""/>
           <span lang="fr">A compter de la date de la collecte de vos données, celle-ci peuvent être conservés jusqu’a 26 mois.</span>
           <span lang="en">From the date of collection, your data may be retained for up to 26 months.</span>
         </p>
-    </ol>  
+    </ol> 
 
-  <li class="Titre1"><span lang="fr">Liens hypertextes</span><span lang="en">Hypertext links</li>
+<h2 class="maskedtitle">
+  <li class="Titre1">
+    <span lang="fr">Liens hypertextes</span>
+    <span lang="en">Hypertext links</span>
+  </li>
+</h2>
       <p class="paragraphe">
         <span lang="fr">La mise en place de liens hypertextes vers le site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> n’est conditionnée à aucun accord préalable, seule la mention explicite du site internet concerné dans l’intitulé du lien est souhaitée.</span>
         <span lang="en">The setting up of hypertext links to the <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website is not subject to any prior agreement, only the explicit mention of the website concerned in the title of the link is desired.</span>
@@ -349,7 +374,12 @@ crossorigin=""/>
         <span lang="en">The <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website contains a certain number of hyperlinks to other external websites, set up with the authorisation of ScenTree SAS team. However, ScenTree SAS team have no possibility of verifying the content of the sites thus visited, and therefore do not assume any responsibility for it.</span>
       </p>
 
-  <li class="Titre1"><span lang="fr">Cookies</span><span lang="en">Cookies</span></li>
+<h2 class="maskedtitle">
+  <li class="Titre1">
+    <span lang="fr">Cookies</span>
+    <span lang="en">Cookies</span>
+  </li>
+</h2>
     <p class="paragraphe">
       <span lang="fr">La navigation sur le site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> est susceptible de provoquer l’installation de cookie(s) sur l’ordinateur de l’utilisateur. Un cookie est un fichier de petite taille, qui ne permet pas l’identification de l’utilisateur, mais qui enregistre des informations relatives à la navigation d’un ordinateur sur un site. Les données ainsi obtenues visent à faciliter la navigation ultérieure sur le site internet et ont également vocation à permettre diverses mesures de fréquentation.</span>
       <span lang="en">Browsing on <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website may cause the installation of cookie(s) on the user's computer. A cookie is a small file, which does not allow the identification of the user, but which records information relating to the navigation of a computer on a site. The data obtained in this way is intended to facilitate subsequent navigation on the website and is also intended to allow various measures of frequentation.</span>
@@ -482,7 +512,12 @@ crossorigin=""/>
       </ol>
     </p>
 
-  <li class="Titre1"><span lang="fr">Droit applicable et attribution de juridiction</span><span lang="en">Applicable law and jurisdiction</li>
+<h2 class="maskedtitle">
+  <li class="Titre1">
+    <span lang="fr">Droit applicable et attribution de juridiction</span>
+    <span lang="en">Applicable law and jurisdiction</span>
+  </li>
+</h2>
     <p class="paragraphe">
       <span lang="fr">Tout litige en relation avec l’utilisation du site internet <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> est soumis au droit français. Il est fait attribution exclusive de juridiction aux tribunaux compétents de PARIS.</span>
       <span lang="en">Any dispute related with the use of the <a class="interpop" href="https://www.scentree.co/" target="_BLANK">scentree.co</a> website is subjected to French law. The courts of PARIS have exclusive jurisdiction.</span>
