--- a/html/_/index.html
+++ b/html/_/index.html
@@ -193,8 +193,7 @@ crossorigin=""/>
       <div class="modal-header">
         <div class="container-fluid  d-inline-block">
           <div class="row">
-            <h1 class="col-12 col-md-6 nomdescripteur">
-              <!--font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md-->
+            <h1 class="col-12 col-md-6 nomdescripteur font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
               <span id="modaltitle2" class="modal-title modal-title1"></span>
             </h1>
             <h3 class="col-12 col-md-6 typedescripteur text-size-18px text-center-before-md text-align-right-strictly-after-md">
