--- a/html/_/index.html
+++ b/html/_/index.html
@@ -192,7 +192,7 @@ crossorigin=""/>
     <div class="modal-content">
       <div class="modal-header">
         <div class="container-fluid  d-inline-block">
-          <div class="row">
+          <div class="row" style="background-color: blue;">
             <h1 class="col-12 col-md-6 nomdescripteur font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
               <span id="modaltitle2" class="modal-title modal-title1"></span>
             </h1>
