--- a/html/_/index.html
+++ b/html/_/index.html
@@ -190,8 +190,7 @@ crossorigin=""/>
 <div class="modal fade" tabindex="-1" role="dialog" id="DescripteurModal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header" style="background-color: blue;">
-        <div class="container-fluid d-inline-block" style="background-color: white;">
+      <div class="modal-header container-fluid d-inline-block" style="background-color: white;">
           <div class="row">
             <h1 class="col-12 col-md-6 nomdescripteur font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
               <span id="modaltitle2" class="modal-title modal-title1"></span>
@@ -200,7 +199,6 @@ crossorigin=""/>
               <span id="modalheader-type2" class="modalheader-type"></span>
             </h3>
           </div>
-        </div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
 
