--- a/html/_/index.html
+++ b/html/_/index.html
@@ -190,7 +190,8 @@ crossorigin=""/>
 <div class="modal fade" tabindex="-1" role="dialog" id="DescripteurModal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
-      <div class="modal-header container-fluid d-inline-block" style="background-color: white;">
+
+      <div class="modal-header container-fluid d-inline-block">
           <div class="row">
             <h1 class="col-12 col-md-6 nomdescripteur font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
               <span id="modaltitle2" class="modal-title modal-title1"></span>
@@ -201,19 +202,19 @@ crossorigin=""/>
           </div>
       </div>
 
-    <div class="modal-body">
-      <div class="container-fluid">
-        <div class="row">         
-          <div class="col-sm-12">
-            <p><span class="Commentaires"><span id="modalbody-comment2" class="textdescripteurs"></span></span></p>
-          </div>
-        </div> 
-      </div> <!-- fin container -->
-    </div> <!-- fin body -->
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">         
+            <div class="col-sm-12">
+               <span id="modalbody-comment2" class="textdescripteurs m-2"></span>
+            </div>
+          </div> 
+        </div> <!-- fin container -->
+      </div> <!-- fin body -->
 
-    <div class="modal-footer">
-      <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
-    </div> <!-- fin footer -->
+      <div class="modal-footer">
+        <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
+      </div> <!-- fin footer -->
 
     </div> <!-- fin content -->
   </div> <!-- fin container -->
