--- a/html/_/index.html
+++ b/html/_/index.html
@@ -205,8 +205,8 @@ crossorigin=""/>
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">         
-            <div class="col-sm-12">
-               <span id="modalbody-comment2" class="textdescripteurs m-2"></span>
+            <div class="col-12">
+               <span id="modalbody-comment2" class="textdescripteurs mt-2 mb-2"></span>
             </div>
           </div> 
         </div> <!-- fin container -->
