--- a/html/_/index.html
+++ b/html/_/index.html
@@ -213,7 +213,10 @@ crossorigin=""/>
       </div> <!-- fin body -->
 
       <div class="modal-footer">
-        <button class="btn btn-secondary mx-auto" data-dismiss="modal"><span lang="fr">Fermer</span><span lang="en">Close</span></button>
+        <button class="btnclose btn btn-secondary mx-auto" data-dismiss="modal">
+          <span lang="fr">Fermer</span>
+          <span lang="en">Close</span>
+        </button>
       </div> <!-- fin footer -->
 
     </div> <!-- fin content -->
