--- a/html/_/index.html
+++ b/html/_/index.html
@@ -213,7 +213,7 @@ crossorigin=""/>
       </div> <!-- fin body -->
 
       <div class="modal-footer">
-        <button class="btnclose btn btn-secondary mx-auto" data-dismiss="modal">
+        <button class="btnclose btn mx-auto" data-dismiss="modal">
           <span lang="fr">Fermer</span>
           <span lang="en">Close</span>
         </button>
