--- a/html/_/index.html
+++ b/html/_/index.html
@@ -230,10 +230,9 @@ crossorigin=""/>
 <div class="modal-content">
   
   <!--modal header-->
-<div class="modal-header">
-  <div class="container-fluid  d-inline-block">
+<div class="modal-header container-fluid  d-inline-block">
   <div class="row">
-      <h1 class="col-12 col-md-6 font-weight-bold text-size-20px   text-center-before-md text-align-left-strictly-after-md">
+      <h1 class="col-12 col-md-6 font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
         <span id="modaltitle" class="modal-title "></span>
       </h1>
       <h4 class="col-12 col-md-6 text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
@@ -241,9 +240,10 @@ crossorigin=""/>
       </h4>
       <div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
   </div>
-  </div>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
+
+
 
 <div class="modal-body m-0 p-0 text-size-14px text-justify"> 
   <!-- définissions des onglets -->
