--- a/html/_/index.html
+++ b/html/_/index.html
@@ -230,7 +230,8 @@ crossorigin=""/>
 <div class="modal-content">
   
   <!--modal header-->
-<div class="modal-header container-fluid  d-inline-block">
+<div class="modal-header">
+  <div class="container-fluid  d-inline-block">
   <div class="row">
       <h1 class="col-12 col-md-6 font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
         <span id="modaltitle" class="modal-title "></span>
@@ -239,6 +240,7 @@ crossorigin=""/>
         <span id="modalheader-type" class="modalheader-type2"></span>
       </h4>
       <div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
+  </div>
   </div>
   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
