--- a/html/_/index.html
+++ b/html/_/index.html
@@ -236,7 +236,7 @@ crossorigin=""/>
       <h1 class="col-12 col-md-6 font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
         <span id="modaltitle" class="modal-title "></span>
       </h1>
-      <h4 class="col-12 col-md-6 text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+      <h4 class="type col-12 col-md-6 text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
         <span id="modalheader-type" class="modalheader-type2"></span>
       </h4>
       <div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
