--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -177,12 +177,14 @@ crossorigin=""/>
     <ul>
       <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions</a>, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
+      <li><a class="interpop" href="http://www.osmoz.fr/" target ="_BLANK"> http://www.osmoz.fr/ </a></li>
       <li><a class="interpop" rel="nofollow" href="http://www.thegoodscentscompany.com" target ="_BLANK"> http://www.thegoodscentscompany.com </a></li>
       <li><a class="interpop" href="https://www.givaudan.com" target ="_BLANK"> https://www.givaudan.com </a></li>
       <li><a class="interpop" href="https://www.firmenich.com" target ="_BLANK"> https://www.firmenich.com </a></li>
       <li><a class="interpop" href="https://www.iff.com" target ="_BLANK"> https://www.iff.com </a></li>
       <li><a class="interpop" href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
       <li><a class="interpop" href="https://www.fragrantica.com/" target ="_BLANK"> https://www.fragrantica.com/</a></li>
+      <li><a class="interpop" href="https://www.youtube.com/channel/UCpi9Oo_0F5IG9nbG20t-lIQ" target ="_BLANK"> Meleg Perfumes Youtube Channel</a></li>      
       <li><a class="interpop" href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
       <li><span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.</span><span lang="en">The whole technical data given by <i>ScenTree</i> was sourced from SDS coming for major companies of the perfumery area.</span></li>
       <li><span lang="fr">Une partie des données présentées dans cette classification ne sont pas sourcées. Elles proviennent en effet de la collaboration avec plusieurs professionnels du monde de la parfumerie, comme le veux notre protocole de classification des matières premières.</span><span lang="en">Part of the data provided by this classification is not sourced. It comes from our collaboration with a few olfaction and perfumery experts, as our raw materials classification protocol wishes to.</span></li>
